# VulkanLib

./: .gitignore  .gitmodules  CMakeLists.txt  MElog.txt  README  RTBase.glsl  ShaderBase.glsl  VulkanLib.sln  closehit.glsl  content.vert  include.glsl  log.txt  main.frag  main.vert  meson.build  miss.glsl  pom.xml  raygen.glsl  testinc.glsl
VulkanLib/: Class1.cs  VulInstance.cs  VulInstanceBuilder.cs  VulkanLib.csproj
VulkanLib/Device/: VulDeviceBuilder.cs  VulSwapChain.cs
VulkanLib/Device/Image/: VulImage.cs  VulImageView.cs
VulkanLib/Device/LogicalDevice/: VulLogicalDevice.cs  VulLogicalQueue.cs
VulkanLib/Device/PhysicalDevice/: DeviceSuitability.cs  DeviceSuitabillity.cs  PhysicalDevice.cs  VulPhysicalDevice.cs
VulkanLib/InstanceLogger/: DefaultVulkanLoggerCallback.cs  IInstanceLoggerCallback.cs  IVulInstanceLoggerCallback.cs  InstanceLogger.cs  VulInstanceLogger.cs
VulkanLib/ObjectManagement/: DestroyableObject.cs  VulResultException.cs
VulkanLibTesting/: Program.cs  VulkanLibTesting.csproj
src/cxx/VulkanLib/: Instance.cpp  Instance.hpp  InstanceBuilder.cpp  InstanceBuilder.hpp  VulkanLibAllocationCallback.cpp  VulkanLibAllocationCallback.h  t.cpp
src/cxx/VulkanLib/Device/: DeviceBuilder.hpp  STD140Types.hpp
src/cxx/VulkanLib/Device/Buffer/: Buffer.cpp  Buffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  IndirectBuffer.cpp  IndirectBuffer.hpp  PushConstant.cpp  PushConstant.hpp  StorageBuffer.cpp  StorageBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/cxx/VulkanLib/Device/Descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp
src/cxx/VulkanLib/Device/Image/: Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Sampler.cpp  Sampler.hpp
src/cxx/VulkanLib/Device/LogicalDevice/: DeviceSuitability.hpp  LogicalDevice.cpp  LogicalDevice.hpp  LogicalQueue.cpp  LogicalQueue.hpp  PhysicalDevice.hpp
src/cxx/VulkanLib/Device/PhysicalDevice/: DeviceSuitability.hpp  LogicalDevice.hpp  LogicalQueue.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
src/cxx/VulkanLib/Device/PresentPassThrough/: PresentPassThrough.h
src/cxx/VulkanLib/Device/SwapChain/: SwapChain.hpp
src/cxx/VulkanLib/Device/Synchronization/: IResizeCallback.hpp  OneFrameSyncCompute.hpp  SyncManager.hpp  ThreeFrameSynchronization.hpp
src/cxx/VulkanLib/GraphicsPipeline/: GraphicsPipeline.hpp  RenderPass.hpp  Shader.hpp
src/cxx/VulkanLib/GraphicsPipeline/Configuration/: GraphicsPipelineBuilder.hpp  GraphicsPipelineConfig.hpp  GraphicsPipelineConfigurer.hpp
src/cxx/VulkanLib/GraphicsPipeline/RenderPass/: FrameBuffer.hpp  RenderPass.hpp  RenderPassBuilder.hpp
src/cxx/VulkanLib/InstanceLogger/: DefaultVulkanFileLoggerCallback.hpp  DefaultVulkanLoggerCallback.hpp  IInstanceLoggerCallback.hpp  InstanceLogger.hpp
src/cxx/VulkanLib/MemoryUtils/: FileReader.hpp  IDestroyableObject.hpp  MemoryUtils.hpp  SerialObject.hpp  SeriesObject.hpp  VectorUtils.hpp
src/cxx/VulkanLib/Pipelines/: Shader.hpp
src/cxx/VulkanLib/Pipelines/ComputePipeline/: ComputePipeline.cpp  ComputePipeline.hpp
src/cxx/VulkanLib/Pipelines/GraphicsPipeline/: GraphicsPipeline.hpp
src/cxx/VulkanLib/Pipelines/GraphicsPipeline/Configuration/: GraphicsPipelineBuilder.hpp
src/cxx/VulkanLib/Pipelines/PipelineConfiguration/: PipelineBuilder.hpp  PipelineConfigurer.hpp
src/cxx/VulkanLib/Pipelines/RayTracingPipeline/: RayTracingPipeline.hpp  RayTracingPipelineBuilder.hpp  ShaderBindingTable.hpp
src/cxx/VulkanLib/Pipelines/RayTracingPipeline/AccelerationStructures/: ASTypes.hpp  ASUtils.hpp  BottomLevelAccelerationStructure.hpp  TopLevelAccelerationStructure.hpp
src/cxx/VulkanLib/RayTracingPipeline/: ASUtils.hpp  BottomLevelAccelerationStructure.hpp  RTTypes.hpp  ScratchBufferPool.hpp  TopLevelAccelerationStructure.hpp
src/cxx/VulkanLib/RenderPipeline/: FrameBufferManager.hpp  GraphicsRenderPipeline.cpp  GraphicsRenderPipeline.hpp  OmniRenderingGraphicsPipeline.cpp  OmniRenderingGraphicsPipeline.hpp  RayTracingRenderPipeline.hpp  RenderImagePool.hpp  RenderPipeline.hpp
src/cxx/VulkanLib/Shader/: ShaderCreateInfo.hpp  ShaderLoader.hpp  ShaderLoaderIncluder.hpp
src/exec/: main.cpp
src/exec/RenderPipeline/: FrameBufferManager.hpp  RenderPipeline.hpp  RenderPipelineBuilder.hpp
src/exec/Window/: Monitor.cpp  Monitor.hpp  Window.cpp  Window.hpp  WindowInputSystem.cpp  WindowInputSystem.hpp
src/glsl/: main.frag  main.vert
src/main/java/com/kgaft/VulkanLib/: Main.java  Main.java.old
src/main/java/com/kgaft/VulkanLib/Device/: DeviceBuilder.java  SwapChain.java
src/main/java/com/kgaft/VulkanLib/Device/Buffer/: Buffer.java  IndexBuffer.java  IndirectBuffer.java  PushConstant.java  StorageBuffer.java  UniformBuffer.java  VertexBuffer.java
src/main/java/com/kgaft/VulkanLib/Device/Descriptors/: DescriptorAccelerationStructureInfo.java  DescriptorBufferInfo.java  DescriptorImageInfo.java  DescriptorPool.java  DescriptorSet.java
src/main/java/com/kgaft/VulkanLib/Device/Image/: Image.java  ImageView.java  Sampler.java
src/main/java/com/kgaft/VulkanLib/Device/LogicalDevice/: LogicalDevice.java  LogicalQueue.java
src/main/java/com/kgaft/VulkanLib/Device/PhysicalDevice/: DeviceSuitability.java  DeviceSuitabilityResults.java  (+2 more)
src/main/java/com/kgaft/VulkanLib/Instance/: Instance.java  InstanceBuilder.java  InstanceLogger.java
src/main/java/com/kgaft/VulkanLib/PhysicalDevice/: PhysicalDevice.java
src/main/java/com/kgaft/VulkanLib/RenderPipeline/: GraphicsRenderPipeline.java  RenderImagePool.java
src/main/java/com/kgaft/VulkanLib/Shader/: AdditionalLine.java  Includer.java  Shader.java  ShaderCreateInfo.java  ShaderFileType.java  ShaderLoader.java
src/main/java/com/kgaft/VulkanLib/Utils/: DestroyableObject.java  FileReader.java  LwjglObject.java  MemoryUtils.java  Range.java  SeriesObject.java  StringByteBuffer.java  ThreadPool.java  VerboseUtil.java  VkErrorException.java
src/main/java/com/kgaft/VulkanLib/Window/: Window.java  WindowResizeCallBack.java
(+25 files in other folders)
